syntax = "proto3";

package category;

option go_package = "mebellar-backend/pkg/pb;pb";

import "google/protobuf/timestamp.proto";

// ============================================
// SHARED TYPES
// ============================================

message LocalizedString {
  string uz = 1;
  string ru = 2;
  string en = 3;
}

// ============================================
// CATEGORY ATTRIBUTE (Dynamic Form Fields)
// ============================================

message AttributeOption {
  string value = 1;
  LocalizedString label = 2;
}

message CategoryAttribute {
  string id = 1;
  string category_id = 2;
  string key = 3;
  string type = 4;  // text, number, dropdown, switch
  LocalizedString label = 5;
  repeated AttributeOption options = 6;
  bool is_required = 7;
  int32 sort_order = 8;
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
}

// ============================================
// CATEGORY
// ============================================

message Category {
  string id = 1;
  string parent_id = 2;
  LocalizedString name = 3;
  string slug = 4;
  string icon_url = 5;
  bool is_active = 6;
  int32 sort_order = 7;
  int32 product_count = 8;
  repeated Category sub_categories = 9;
  repeated CategoryAttribute attributes = 10;  // Optional: include attributes with category
}

// Flat category for admin list views
message FlatCategory {
  string id = 1;
  string parent_id = 2;
  string parent_name = 3;
  LocalizedString name = 4;
  string icon_url = 5;
  bool is_active = 6;
  int32 sort_order = 7;
  int32 product_count = 8;
}

// ============================================
// REQUEST/RESPONSE MESSAGES
// ============================================

message ListCategoriesRequest {
  bool active_only = 1;
  bool include_attributes = 2;  // Whether to include attributes in response
  bool flat = 3;  // Return flat list instead of tree (for admin)
}

message ListCategoriesResponse {
  repeated Category categories = 1;
  int32 count = 2;
}

message ListFlatCategoriesResponse {
  repeated FlatCategory categories = 1;
  int32 count = 2;
}

message GetCategoryRequest {
  string id = 1;
  bool include_attributes = 2;
}

message CategoryResponse {
  Category category = 1;
}

message CreateCategoryRequest {
  string parent_id = 1;
  LocalizedString name = 2;
  string slug = 3;
  string icon_url = 4;
  bool is_active = 5;
  int32 sort_order = 6;
}

message UpdateCategoryRequest {
  string id = 1;
  optional string parent_id = 2;
  optional LocalizedString name = 3;
  optional string slug = 4;
  optional string icon_url = 5;
  optional bool is_active = 6;
  optional int32 sort_order = 7;
}

message DeleteCategoryRequest {
  string id = 1;
}

// ============================================
// CATEGORY ATTRIBUTE REQUESTS
// ============================================

message ListCategoryAttributesRequest {
  string category_id = 1;
}

message ListCategoryAttributesResponse {
  repeated CategoryAttribute attributes = 1;
  int32 count = 2;
}

message GetCategoryAttributeRequest {
  string id = 1;
}

message CategoryAttributeResponse {
  CategoryAttribute attribute = 1;
}

message CreateCategoryAttributeRequest {
  string category_id = 1;
  string key = 2;
  string type = 3;  // text, number, dropdown, switch
  LocalizedString label = 4;
  repeated AttributeOption options = 5;
  bool is_required = 6;
  int32 sort_order = 7;
}

message UpdateCategoryAttributeRequest {
  string id = 1;
  optional string key = 2;
  optional string type = 3;
  optional LocalizedString label = 4;
  repeated AttributeOption options = 5;  // Replaces all options
  optional bool is_required = 6;
  optional int32 sort_order = 7;
}

message DeleteCategoryAttributeRequest {
  string id = 1;
}

// Empty message
message Empty {}

// ============================================
// CATEGORY SERVICE
// ============================================

service CategoryService {
  // Category CRUD
  rpc ListCategories(ListCategoriesRequest) returns (ListCategoriesResponse);
  rpc ListFlatCategories(ListCategoriesRequest) returns (ListFlatCategoriesResponse);  // Admin flat list
  rpc GetCategory(GetCategoryRequest) returns (CategoryResponse);
  rpc CreateCategory(CreateCategoryRequest) returns (CategoryResponse);  // Admin only
  rpc UpdateCategory(UpdateCategoryRequest) returns (CategoryResponse);  // Admin only
  rpc DeleteCategory(DeleteCategoryRequest) returns (Empty);  // Admin only

  // Category Attributes
  rpc ListCategoryAttributes(ListCategoryAttributesRequest) returns (ListCategoryAttributesResponse);
  rpc GetCategoryAttribute(GetCategoryAttributeRequest) returns (CategoryAttributeResponse);
  rpc CreateCategoryAttribute(CreateCategoryAttributeRequest) returns (CategoryAttributeResponse);  // Admin only
  rpc UpdateCategoryAttribute(UpdateCategoryAttributeRequest) returns (CategoryAttributeResponse);  // Admin only
  rpc DeleteCategoryAttribute(DeleteCategoryAttributeRequest) returns (Empty);  // Admin only
}
